--- a/src/pages/Main/index.html
+++ b/src/pages/Main/index.html
@@ -4,10 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Main</title>
-  <link href='../../theme/global.css' ref='stylesheet' type="text/css" />
-  <link href='./style.css' ref='stylesheet' type="text/css" />
+  <style>
+    *, *::before, *::after {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+    }
+
+    body {
+      width: 400px;
+      height: 300px;
+      overflow-x: hidden;
+    }
+  </style>
 </head>
 <body>
-  
+  <h1>TRUTH APP</h1>
+  <a href='../Eval/index.html'>평가</a>
 </body>
 </html>
