--- a/src/pages/Check/index.html
+++ b/src/pages/Check/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Check</title>
-  <link href='../../theme/global.css' ref='stylesheet' type="text/css" />
-  <link href='./style.css' ref='stylesheet' type="text/css" />
+  <link rel="stylesheet" href="./style.css" type="text/css" />
+  <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
+  <script src='./script.js' async></script>
 </head>
 <body>
   
