info page update

--- a/src/pages/Info/index.html
+++ b/src/pages/Info/index.html
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
   <script src='./script.js' async></script>
 </head>
-<body>
-  
-</body>
+	<body>
+			<div class="back">
+				<a href='../Main/index.html'>←</a>
+      </div>
+      <section class="infoContainer"></section>
+	</body>
 </html>
+
