--- a/src/pages/Login/index.html
+++ b/src/pages/Login/index.html
@@ -9,6 +9,29 @@
   <script src='./script.js' async></script>
 </head>
 <body>
-  
+  <div class="header">
+    <h1>TRUTH</h1>
+  </div>
+  <form class="loginForm" autocomplete="off">
+    <div class="inputBoxContainer">
+      <div class="inputBox idBox">
+        <label><img src='../../../public/images/user.svg' /></label>
+        <input type="text" name="name" value="" placeholder="ID" maxlength="15" minlength="5" />
+      </div>
+      <div class="inputBox pwBox">
+        <label><img src='../../../public/images/password.svg' /></label>
+        <input type="password" name="password" value="" placeholder="password" maxlength="100" minlength="10" />
+      </div>
+    </div>
+    <div class="buttonBox">
+      <button type="submit">Login</button>
+    </div>
+  </form>
+
+  <!--
+    아이콘 제작자: <a href="https://www.flaticon.com/kr/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon"> www.flaticon.com</a>
+    아이콘 제작자 <a href="https://www.flaticon.com/kr/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon"> www.flaticon.com</a>
+  -->
 </body>
 </html>
+
