--- a/src/pages/Profile/index.html
+++ b/src/pages/Profile/index.html
@@ -9,6 +9,22 @@
   <script src='./script.js' async></script>
 </head>
 <body>
-  
+		<div class="back">
+			<a href='../Main/index.html'>←</a>
+		</div>
+		<div class="margin_all">
+			<div class="profile">
+				<img src="../../../public/images/user.svg" />
+			</div>
+			<div class="name">
+				loading...
+			</div>
+			<img class="medal" src="../../../public/images/gold.png" />
+			<div class="rank_div">
+				<p class="rank">
+					loading...
+				</p>
+			</div>
+		</div>
 </body>
 </html>
