--- a/src/pages/Signup/index.html
+++ b/src/pages/Signup/index.html
@@ -16,11 +16,11 @@
     <div class="inputBoxContainer">
       <div class="inputBox idBox">
         <label><img src='../../../public/images/user.svg' /></label>
-        <input type="text" name="name" value="" placeholder="ID" />        
+        <input type="text" name="name" value="" placeholder="ID" maxlength="15" minlength="5" />
       </div>
       <div class="inputBox pwBox">
         <label><img src='../../../public/images/password.svg' /></label>
-        <input type="password" name="password" value="" placeholder="password" />
+        <input type="password" name="password" value="" placeholder="password" maxlength="100" minlength="10" />
       </div>
     </div>
     <div class="buttonBox">
