--- a/src/pages/Main/index.html
+++ b/src/pages/Main/index.html
@@ -24,11 +24,11 @@
   <div class="statusContainer">
     <div class="box">
       <img src="../../../public/images/true.png" />
-      <p class="score">20</p>
+      <p class="score truth">0</p>
     </div>
     <div class="box">
       <img src="../../../public/images/false.png" />
-      <p class="score">80</p>
+      <p class="score lie">0</p>
     </div>
   </div>
 
