--- a/src/pages/Eval/index.html
+++ b/src/pages/Eval/index.html
@@ -18,11 +18,11 @@
     <h1 class="text">주의: 한 번 제출하면 수정할 수 없습니다.</h1>
   </div>
   <div class="buttonContainer">
-    <button class="button">
+    <button class="button truth">
       <img src="../../../public/images/true.png" />
     </button>
     <h1 class="text true">진실</h1>
-    <button class="button">
+    <button class="button lie">
       <img src="../../../public/images/false.png" />
     </button>
     <h1 class="text false">거짓</h1>
@@ -31,7 +31,7 @@
     <textarea type="text" class="textbox" placeholder="평가에 대한 근거를 작성해보세요."></textarea>
   </div>
   <div class="button_loc">
-    <button type="submit" class="button">제출</button>
+    <button type="submit" class="button eval_submit">제출</button>
   </div>
 </body>
 
