--- a/src/pages/Profile/index.html
+++ b/src/pages/Profile/index.html
@@ -25,6 +25,9 @@
 					loading...
 				</p>
 			</div>
-		</div>
+    </div>
+    <div class="btnBox">
+      <button class="logout">Logout</button>
+    </div>
 </body>
 </html>
