--- a/src/pages/Login/index.html
+++ b/src/pages/Login/index.html
@@ -28,6 +28,8 @@
     </div>
   </form>
 
+  <a href='../Signup/index.html' class="goToSignup">You have not account?</a>
+
   <!--
     아이콘 제작자: <a href="https://www.flaticon.com/kr/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon"> www.flaticon.com</a>
     아이콘 제작자 <a href="https://www.flaticon.com/kr/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon"> www.flaticon.com</a>
