--- a/src/pages/Main/index.html
+++ b/src/pages/Main/index.html
@@ -45,7 +45,7 @@
     <h1>관련 정보</h1>
     <div class="infoBox">
       <div class="title">
-        <a href='#' target="_blank">
+        <a target="_blank">
           <h2>loading...</h2>
         </a>
       </div>
