--- a/src/pages/Check/index.html
+++ b/src/pages/Check/index.html
@@ -15,6 +15,12 @@
     <a href='../Main/index.html'>←</a>
     <h1>평가 기록</h1>
   </div>
+  <div class="sort-line">
+    <select id="sort-select">
+      <option value="rank">랭크순</option>
+      <option value="latest">최신순</option>
+    </select>
+  </div>
   <section class="evalList"></section>
 </body>
 
