--- a/src/pages/Main/index.html
+++ b/src/pages/Main/index.html
@@ -49,7 +49,10 @@
       <h1>팩트체크</h1>
     </div>
     <p>loading...</p>
-    <a target="_blank">자세히보기</a>
+    <div class="link_box">
+      <a target="_blank" class="seeMore">자세히보기</a>
+      <a target='_blank' href='https://factcheck.snu.ac.kr'>출처</a>
+    </div>
   </div>
 
   <div class="infoContainer">
