--- a/src/pages/Eval/index.html
+++ b/src/pages/Eval/index.html
@@ -15,7 +15,7 @@
     <a href='../Main/index.html'>←</a>
   </div>
   <div class="warning">
-    <h1 class="text">주의: 한 번 제출하면 수정할 수 없습니다.</h1>
+    <h1 class="text">제출된 글에 대한 책임은 작성자 본인에게 있습니다.</h1>
   </div>
   <div class="buttonContainer">
     <button class="button truth">
