--- a/src/pages/Profile/index.html
+++ b/src/pages/Profile/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="./style.css" type="text/css" />
   <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
   <script src='./script.js' async></script>
-  <script src="../../theme/i18next.js"></script>
-  <script src="./i18n.js" defer></script>
+  <script src='../../theme/translater.js' defer></script>
 </head>
 
 <body>
@@ -36,7 +35,7 @@
     </div>
   </div>
   <div class="btnBox">
-    <button class="logout" id="logout"></button>
+    <button class="logout trs" id="profile-logout">로그아웃</button>
   </div>
 </body>
 
