--- a/src/pages/Info/index.html
+++ b/src/pages/Info/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="./style.css" type="text/css" />
   <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
   <script src='./script.js' async></script>
+  <script src='../../theme/translater.js' defer></script>
 </head>
 
 <body>
   <div class="back">
     <a href='../Main/index.html'>←</a>
-    <h1>관련 정보</h1>
+    <h1 class="trs" id="info-ReleInfo"></h1>
   </div>
   <section class="infoContainer"></section>
 </body>
