--- a/src/pages/Eval/index.html
+++ b/src/pages/Eval/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style.css" type="text/css" />
   <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
   <script src='./script.js' async></script>
+  <script src='../../theme/translater.js' defer></script>
 </head>
 
 <body>
@@ -15,23 +16,23 @@
     <a href='../Main/index.html'>←</a>
   </div>
   <div class="warning">
-    <h1 class="text">제출된 글에 대한 책임은 작성자 본인에게 있습니다.</h1>
+    <h1 class="text trs" id="eval-warn"></h1>
   </div>
   <div class="buttonContainer">
     <button class="button truth">
       <img src="../../../public/images/true.png" />
     </button>
-    <h1 class="text true">진실</h1>
+    <h1 class="text true trs" id="eval-truth"></h1>
     <button class="button lie">
       <img src="../../../public/images/false.png" />
     </button>
-    <h1 class="text false">거짓</h1>
+    <h1 class="text false trs" id="eval-fake"></h1>
   </div>
   <div class="textareaBox">
     <textarea type="text" class="textbox" placeholder="평가에 대한 근거를 작성해보세요."></textarea>
   </div>
   <div class="button_loc">
-    <button type="submit" class="button eval_submit">제출</button>
+    <button type="submit" class="button eval_submit trs" id="eval-submit"></button>
   </div>
 </body>
 
