--- a/src/pages/Login/index.html
+++ b/src/pages/Login/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style.css" type="text/css" />
   <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
   <script src='./script.js' async></script>
+  <script src='../../theme/translater.js' defer></script>
 </head>
 
 <body>
@@ -26,11 +27,11 @@
       </div>
     </div>
     <div class="buttonBox">
-      <button type="submit">Login</button>
+      <button type="submit" class="trs" id="login-login"></button>
     </div>
   </form>
 
-  <a href='../Signup/index.html' class="goToSignup">You have not account?</a>
+  <a href='../Signup/index.html' class="goToSignup trs" id="login-gosignup"></a>
 
   <!--
     아이콘 제작자: <a href="https://www.flaticon.com/kr/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon"> www.flaticon.com</a>
