--- a/src/pages/Main/index.html
+++ b/src/pages/Main/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style.css" type="text/css" />
   <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
   <script src='./script.js' async></script>
+  <script src='../../theme/translater.js' defer></script>
 </head>
 
 <body>
@@ -35,10 +36,10 @@
 
     <div class="EvalButtonBox">
       <a href='../Check/index.html'>
-        <button class="button">평가보기</button>
+        <button class="button trs" id="main-view"></button>
       </a>
       <a href='../Eval/index.html'>
-        <button class="button">평가하기</button>
+        <button class="button trs" id="main-write"></button>
       </a>
     </div>
   </section>
@@ -46,18 +47,18 @@
   <div class="factCheckContainer">
     <div class="topLine">
       <img src='../../../public/images/pin.svg' />
-      <h1>팩트체크</h1>
+      <h1 class="trs" id="main-factcheck"></h1>
     </div>
-    <p>loading...</p>
+    <p class="trs" id="loading"></p>
     <div class="link_box">
-      <a target="_blank" class="seeMore">자세히보기</a>
-      <a target='_blank' href='https://factcheck.snu.ac.kr'>출처</a>
+      <a target="_blank" class="seeMore trs" id="main-detail"></a>
+      <a target='_blank' href='https://factcheck.snu.ac.kr' class="trs" id="main-source"></a> 
     </div>
   </div>
 
   <div class="infoContainer">
     <div class="topLine">
-      <h1>관련 정보</h1>
+      <h1 class="trs" id="main-releinfo"></h1>
       <button>
         <img src='../../../public/images/down.svg' />
       </button>
@@ -65,15 +66,15 @@
     <div class="infoBox">
       <div class="title">
         <a target="_blank">
-          <h2>loading...</h2>
+          <h2 class="trs" id="loading"></h2>
         </a>
       </div>
       <div class="description">
-        <p>loading...</p>
+        <p class="trs" id="loading"></p>
       </div>
     </div>
     <div class="seeMore">
-      <a href='../Info/index.html'>더보기</a>
+      <a href='../Info/index.html' class="trs" id="main-seemore"></a>
     </div>
   </div>
 
