--- a/src/pages/Signup/index.html
+++ b/src/pages/Signup/index.html
@@ -31,7 +31,7 @@
     </div>
   </form>
 
-  <a href='../Login/index.html' class="goToLogin trs" id="signup-gologin">You have account?</a>
+  <a href='../Login/index.html' class="goToLogin trs" id="signup-gologin"></a>
 
   <!--
     아이콘 제작자: <a href="https://www.flaticon.com/kr/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/kr/" title="Flaticon"> www.flaticon.com</a>
