--- a/src/pages/Main/index.html
+++ b/src/pages/Main/index.html
@@ -66,11 +66,11 @@
     <div class="infoBox">
       <div class="title">
         <a target="_blank">
-          <h2 class="trs" id="loading"></h2>
+          <h2>loading...</h2>
         </a>
       </div>
       <div class="description">
-        <p class="trs" id="loading"></p>
+        <p>loading...</p>
       </div>
     </div>
     <div class="seeMore">
