--- a/src/pages/Check/index.html
+++ b/src/pages/Check/index.html
@@ -7,8 +7,8 @@
   <title>Check</title>
   <link rel="stylesheet" href="./style.css" type="text/css" />
   <link rel="stylesheet" href="../../theme/global.css" type="text/css" />
-  <script src='./script.js' async></script>
   <script src='../../theme/translater.js' defer></script>
+  <script src='./script.js' defer></script>
 </head>
 
 <body>
