add japanese option

--- a/src/pages/Profile/index.html
+++ b/src/pages/Profile/index.html
@@ -18,6 +18,7 @@
       <select class="language" id="lang-select">
         <option value="en">English</option>
         <option value="ko">한국어</option>
+		<option value="jp">日本語</option>
       </select>
     </div>
   </div>
