complete japanese translate and bug fixed

--- a/src/pages/Main/index.html
+++ b/src/pages/Main/index.html
@@ -58,7 +58,7 @@
 
   <div class="infoContainer">
     <div class="topLine">
-      <h1 class="trs" id="main-releinfo"></h1>
+      <h1 class="trs" id="releinfo"></h1>
       <button>
         <img src='../../../public/images/down.svg' />
       </button>
