--- a/src/pages/Info/index.html
+++ b/src/pages/Info/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="back">
     <a href='../Main/index.html'>←</a>
-    <h1 class="trs" id="ReleInfo"></h1>
+    <h1 class="trs" id="releinfo"></h1>
   </div>
   <section class="infoContainer"></section>
 </body>
